--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <a class="footer-link" href="https://www.linkedin.com/in/chinwendu-clement-a3517123a/">LinkedIn</a>
         <a class="footer-link" href="https://twitter.com/home">Twitter</a>
         <a class="footer-link" href="https://github.com/">Github</a>
-        <p class="copyright">© 2022 Clement Nwatu @ Clem Thech.</p>
+        <p class="copyright">© 2022 Clement Nwatu @ Clem Tech.</p>
       </div>
     </body>
 
