--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <img class="chilli-img" src="images/ps4.png" alt="chillies=img">
 
             <h3>Fifa video games</h3>
-            <p>Actually i enjoy playing the fifa video games so well that sometimes i skip meals over it. I am the undiputed king of fifa challenges. i love eating fish too.</p>
+            <p>Actually i enjoy playing the fifa video games so well that sometimes i skip meals over it. I am the undisputed king of fifa challenges. i love eating fish too.</p>
 
           </div>
         </div>
