--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 
 
       <div class="bottom-container">
-        <a class="footer-link" href="https://www.linkedin.com/in/chinwendu-clement-a3517123a/">LinkedIn</a>
-        <a class="footer-link" href="https://twitter.com/home">Twitter</a>
-        <a class="footer-link" href="https://github.com/">Github</a>
+        <a class="footer-link" href="https://www.linkedin.com/in/chinwendu-clement-a3517123a/" target="_blank">LinkedIn</a>
+        <a class="footer-link" href="https://twitter.com/home" target="_blank">Twitter</a>
+        <a class="footer-link" href="https://github.com/" target="_blank">Github</a>
         <p class="copyright">© 2022 Clement Nwatu @ Clem Tech.</p>
       </div>
     </body>
